mnist1W5A-difflayer.bit and hwh 만들기 완료, 이제 pynq에다가 옮겨서 진행해보자

--- a/mnist-cnn_diff_layer/deploy/mnist-cnn.ipynb
+++ b/mnist-cnn_diff_layer/deploy/mnist-cnn.ipynb
@@ -63,7 +63,7 @@
     }
    ],
    "source": [
-    "OVERLAY_PATH = 'overlay.bit'\n",
+    "OVERLAY_PATH = 'mnist1W5A-difflayer.bit'\n",
     "overlay = Overlay(OVERLAY_PATH)\n",
     "dma = overlay.axi_dma_0\n",
     "\n",
